packages/errors/test/__snapshots__/CONFIG_VALIDATION_MSG_ERROR.ansi
[31mYour [33mconfigFile[39m[31m as [94mcypress.config.js[39m[31m set an invalid value:[39m
[31m[39m
[31m[33m`something` was not right[39m[31m[39m